infra/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portfolio-network-policy
  namespace: portfolio
spec:
  podSelector:
    matchLabels:
      app: portfolio-website
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow incoming traffic only from the Ingress Controller and within the namespace (for monitoring metrics)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    # Allow outgoing traffic to kube-dns for domain name resolution
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
